crates/sui-prover/tests/snapshots/multiple_specs/include_external.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
[internal] boogie exited with compilation errors:
output/multiple_specs/include_external.fail/bar_specs_double_foo_imported_module::bar_spec_Check.bpl(4417,4): Error: call to undeclared procedure: $42_fb_foo
1 name resolution errors detected in output/multiple_specs/include_external.fail/bar_specs_double_foo_imported_module::bar_spec_Check.bpl
