crates/sui-prover/tests/snapshots/multiple_specs/include_missing_module.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: included spec module not found for path 'missing_specs'
   ┌─ tests/inputs/multiple_specs/include_missing_module.fail.move:7:1
   │  
 7 │ ╭ module 0x42::bar_specs {
 8 │ │   use prover::prover::ensures;
 9 │ │   use 0x42::fb::bar;
10 │ │ 
   · │
15 │ │   }
16 │ │ }
   │ ╰─^
