crates/sui-prover/tests/snapshots/multiple_specs/override_system.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 271
expression: output
---
Verification successful
