crates/sui-prover/tests/snapshots/multiple_specs/target_missing_module.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: target module not found for path 'missing_module'
   ┌─ tests/inputs/multiple_specs/target_missing_module.fail.move:11:3
   │  
11 │ ╭   public fun bar_spec() {
12 │ │     ensures(true);
13 │ │   }
   │ ╰───^
